Implementando o método de criar uma nova atlética
Tive que desabilitar o SSL pra funcionar no meu pc

--- a/Back-Atletica/appsettings.json
+++ b/Back-Atletica/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Back_AtleticaContext": "Server=(localdb)\\mssqllocaldb;Database=Back_AtleticaContext-27371045-1049-4aa9-871c-c8a998ab1f93;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
